# algorithms

./: .clang-format  .clang-tidy  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml
cmake/: config.cmake
include/searching/: linear_search.hpp
src/: CMakeLists.txt
tests/: CMakeLists.txt  searching_test.cpp
